--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahat Hasan Robin Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width"><h1>Welcome To</h1>
+            <h1><span class="orange-color">Rh</span> World!</h1>
+            <h3>About Me</h3>
+            <p>I am a passionate and results-driven competitive programmer with a strong background in algorithmic problem-solving and software development. I thrive in challenging coding environments and have a proven track record of success in various coding competitions.</p>
+            <a class= "link-button" target= "_blank" href="https://www.linkedin.com/in/rahat-hasan-robin-354641210/">Hire Me</a>
+        </div>
+        <div class="half-width"><img src="robin-pro.png" alt="">
+        </div>
+    </section>
 </body>
-</html>
+</html> 
