--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1><span class="orange-color">Rh</span> World!</h1>
             <h3>About Me</h3>
             <p>I am a passionate and results-driven competitive programmer with a strong background in algorithmic problem-solving and software development. I thrive in challenging coding environments and have a proven track record of success in various coding competitions.</p>
-            <a class= "link-button" target= "_blank" href="https://www.linkedin.com/in/rahat-hasan-robin-354641210/">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rahat-hasan-robin-354641210/" rel="noopener">Hire Me</a>
         </div>
         <div class="half-width"><img src="robin-pro.png" alt="">
         </div>
