--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="top-banner">
-        <div class="half-width"><h1>Welcome To</h1>
+        <div class="half-width">
+            <h1>Welcome To</h1>
             <h1><span class="orange-color">Rh</span> World!</h1>
             <h3>About Me</h3>
-            <p>I am a passionate and results-driven competitive programmer with a strong background in algorithmic problem-solving and software development. I thrive in challenging coding environments and have a proven track record of success in various coding competitions.</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rahat-hasan-robin-354641210/" rel="noopener">Hire Me</a>
+            <p>I am a passionate and results-driven competitive programmer with a strong background in algorithmic
+                problem-solving and software development. I thrive in challenging coding environments and have a proven
+                track record of success in various coding competitions.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rahat-hasan-robin-354641210/"
+                rel="noopener">Hire Me</a>
         </div>
         <div class="half-width"><img src="robin-pro.png" alt="">
         </div>
     </section>
+    <section class="r">
+        <div class="half-width">
+            <img src="robin-pro.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Gain your success</h2>
+            <h3>
+                Become a web Developer
+            </h3>
+            <p>
+                A skilled web developer proficient in front-end and back-end technologies, with expertise in creating
+                dynamic and responsive websites. Proficient in HTML, CSS, JavaScript, and various web development
+                frameworks. Experienced in designing user interfaces, optimizing website performance, and ensuring
+                cross-browser compatibility. Familiar with server-side scripting languages, databases, and web security
+                best practices. Adept at collaborating with cross-functional teams to deliver high-quality, visually
+                appealing, and functional web applications. Continuously staying updated on emerging web technologies
+                and industry trends to enhance development skills and deliver cutting-edge solutions.
+            </p>
+            <a class="link-button" target="_blank" href=" "
+                rel="noopener">Download Resume</a>
+        </div>
+    </section>
 </body>
-</html> 
+
+</html>
