--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner kd">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Rh</span> World!</h1>
@@ -26,7 +26,7 @@
         <div class="half-width"><img src="robin-pro.png" alt="">
         </div>
     </section>
-    <section class="r">
+    <section class="r kd">
         <div class="half-width">
             <img src="robin-pro.png" alt="">
         </div>
@@ -50,17 +50,18 @@
     </section>
     <section class="experiance-area">
         <h1>Experiances</h1>
-        <div>
-            <h1>Full Stack Developer</h1>
-            <h3>2022-present | Pro Level Developer</h3>
-            <p>A versatile full-stack developer with expertise in both front-end and back-end technologies. Proficient in languages such as HTML, CSS, JavaScript, and experienced in using various frameworks for building dynamic and responsive user interfaces. Skilled in server-side scripting languages, database management, and server deployment. Capable of developing end-to-end solutions, from designing user interfaces to implementing robust server-side logic. Possesses a deep understanding of web development principles, APIs, and system architecture. Adaptable team player with a commitment to delivering scalable and efficient applications. Stay updated on industry trends, technologies, and best practices to ensure the delivery of modern and high-quality web solutions.</p>
-        </div>
-        <div>
-            <h1>Half Stack Developer</h1>
-            <h3>2021-present | Entry Level Developer</h3>
-            <p>A focused half-stack developer specializing in either front-end or back-end technologies. Proficient in languages such as HTML, CSS, and JavaScript for front-end development or server-side scripting languages for back-end development. Skilled in utilizing frameworks and tools to create effective solutions within their specialized domain. Capable of contributing to the development of dynamic and responsive user interfaces or implementing robust server-side logic. Possesses a strong foundation in key areas of web development and is committed to staying updated on the latest trends and technologies within their chosen stack. Collaborative team player dedicated to delivering high-quality and efficient solutions in their area of expertise.</p>
+        <div class="kd">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3>2022-present | Pro Level Developer</h3>
+                <p>A versatile full-stack developer with expertise in both front-end and back-end technologies. Proficient in languages such as HTML, CSS, JavaScript, and experienced in using various frameworks for building dynamic and responsive user interfaces. Skilled in server-side scripting languages, database management, and server deployment. Capable of developing end-to-end solutions, from designing user interfaces to implementing robust server-side logic. Possesses a deep understanding of web development principles, APIs, and system architecture. Adaptable team player with a commitment to delivering scalable and efficient applications. Stay updated on industry trends, technologies, and best practices to ensure the delivery of modern and high-quality web solutions.</p>
+            </div>
+            <div class="half-width">
+                <h1>Half Stack Developer</h1>
+                <h3>2021-present | Entry Level Developer</h3>
+                <p>A focused half-stack developer specializing in either front-end or back-end technologies. Proficient in languages such as HTML, CSS, and JavaScript for front-end development or server-side scripting languages for back-end development. Skilled in utilizing frameworks and tools to create effective solutions within their specialized domain. Capable of contributing to the development of dynamic and responsive user interfaces or implementing robust server-side logic. Possesses a strong foundation in key areas of web development and is committed to staying updated on the latest trends and technologies within their chosen stack. Collaborative team player dedicated to delivering high-quality and efficient solutions in their area of expertise.</p>
+            </div>
         </div>
     </section>
 </body>
-
 </html>
